Changelog for ExcelCalc.
1.0.0-beta
==============
- init.