@@ -1,0 +1,3 @@
+html {
+    font-size: inherit !important;
+}
